# tpe_big_data_2026

./: .gitignore
final/: README.md  cpa.py  pipeline.ipynb  pyproject.toml  serving.py
final/cql/: queries.cql
final/tests/: test_gold.py  test_serving.py  test_silver.py
primer-parcial/: primer-parcial.md
segundo-parcial/: .gitignore  DECISIONS.md  README.md  cpa.py  pipeline.ipynb  pipeline.py  pyproject.toml  serving.py
segundo-parcial/cql/: queries.cql  schema.cql
segundo-parcial/evidence/: idempotency.md
segundo-parcial/evidence/astra/: README.md
segundo-parcial/tests/: conftest.py  test_gold.py  test_schemas.py  test_serving.py
